Fix spacing in FAQ section and adjust footer max-width for better layout

--- a/Netflix Clone/style.css
+++ b/Netflix Clone/style.css
@@ -281,6 +281,9 @@ footer .Questions{
     .faqbox {
         font-size: 21px;
     }
+    footer {
+        max-width: 90vw;
+    }
 } 
 
 /* This is for the footer */
